<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_id">548173431902920</string>
    <string name="app_name">Test Self</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>

    <string name="IDCard">เลขบัตรประจำตัวประชาชน</string>
    <string name="Name">ชื่อ</string>
    <string name="LastName">นามสกุล</string>
    <string name="Email">E-mail</string>
    <string name="Sex">เพศ</string>
    <string name="Age">อายุ</string>

    <!--  artistry sector quiz  -->

    <string name="qa1">วิชาสุดโปรด คือ...</string>
    <string name="qa1ans1">ภาษาไทย</string>
    <string name="qa1ans2">ภาษาอังกฤษหรือภาษาต่างประเทศอื่นๆ</string>
    <string name="qa1ans3">สังคม</string>
    <string name="qa1ans4">คณิตศาตร์</string>

    <string name="qa2">ออกไปไกลๆ เลยนะวีชานี้...</string>
    <string name="qa2ans1">ภาษาไทย</string>
    <string name="qa2ans2">ภาษาอังกฤษ</string>
    <string name="qa2ans3">สังคม</string>
    <string name="qa2ans4">คณิตศาตร์</string>

    <string name="qa3">คะแนนวิชาคณิตศาสตร์ของเรามักจะ...</string>
    <string name="qa3ans1">ดีมาก (A)</string>
    <string name="qa3ans2">ดี (B)</string>
    <string name="qa3ans3">ปานกลาง (C)</string>
    <string name="qa3ans4">แย่ (D หรือ F)</string>

    <string name="qa4">ภาษาอังกฤษของเราได้คะแนน...</string>

    <string name="qa5">เป็นคนที่สนใจภาษาในระดับ...</string>
    <string name="qa5ans1">มาก</string>
    <string name="qa5ans2">ปานกลาง</string>
    <string name="qa5ans3">น้อย</string>
    <string name="qa5ans4">น้อยมาก</string>

    <!-- end of sci sub test 1 and start of sci sub test 2 -->

    <string name="qa6">ข้อไหนที่อธิบายความเป็นตัวเราได้ดีที่สุด</string>
    <string name="qa6ans1">เสาะแสวงหาความรู้ตามที่ต่างๆ</string>
    <string name="qa6ans2">สนใจปัญหาสังคม ชอบอ่านข่าวการเมือง</string>
    <string name="qa6ans3">มีเพื่อนเยอะ ชอบทำงานเป็นกลุ่ม</string>
    <string name="qa6ans4">เบื่อง่าย ชอบอะไรที่ท้าทาย</string>

    <string name="qa7">ถ้าจะซื้อปากกาสักด้าม สิ่งแรกที่จะใช้พิจารณาคือ...</string>
    <string name="qa7ans1">ต้องแน่ใจว่าจะได้ปากกาที่มีคุณภาพ เขียนลื่นไหล หมึกออกสม่ำเสมอ</string>
    <string name="qa7ans2">ราคาต้องไม่แพง คุ้มค่าที่จะซื้อ</string>
    <string name="qa7ans3">การดีไซน์รูปแบบปากกาที่ทันสมัย สวยถูกใจ</string>
    <string name="qa7ans4">ดูสีสันของปากกา</string>

    <string name="qa8">ถ้าทำอุปกรณ์หรือเครื่องมืออะไรก็ตามเสียหาย สิ่งที่ทำต่อไปคือ...</string>
    <string name="qa8ans1">ศึกษาคู่มือเพื่อแก้ไขด้วยตัวเองไม่ต้องพึ่งใครให้ยุ่งยาก</string>
    <string name="qa8ans2">ถามผู้รู้ แล้วจึงแก้ไขตามคำแนะนำ</string>
    <string name="qa8ans3">ให้เพื่อนช่วยแก้ไขให้</string>
    <string name="qa8ans4">ทิ้งไปเลย...ก้เสียแล้วนี่นา</string>

    <string name="qa9">อนาคตอันสดใสของเด็กไทย ควรมาจาก...</string>
    <string name="qa9ans1">การได้รับการศึกษาและใส่ใจในการเรียนรู้</string>
    <string name="qa9ans2">การรับประทานอาหารที่ครบหมวดหมู่และการออกกำลังกายให้มีสุขภาพดี</string>
    <string name="qa9ans3">ได้รับการยอมรับจากเพื่อนและกลุ่มสังคม</string>
    <string name="qa9ans4">ความรักความอบอุ่นจากครอบครัว</string>

    <string name="qa10">ข้อใหนที่เราให้ความสนใจมากที่สุด</string>
    <string name="qa10ans1">วิทยาการใหม่ๆ</string>
    <string name="qa10ans2">ข่าวสังคมและการเมือง</string>
    <string name="qa10ans3">งานศิลปะ</string>
    <string name="qa10ans4">งานออกแบบ</string>

    <string name="qa11">รูปทรงใดที่ชอบมากที่สุด</string>
    <string name="qa11ans1">สี่เหลี่ยมจัตุรัส</string>
    <string name="qa11ans2">สามเหลี่ยมด้านเท่า</string>
    <string name="qa11ans3">วงกลม</string>
    <string name="qa11ans4">ครึ่งวงกลม</string>

    <string name="qa12">งานแบบใหนที่ทำแล้วมีความสุข</string>
    <string name="qa12ans1">งานค้นคว้า วิจัย</string>
    <string name="qa12ans2">งานสำนักงาน</string>
    <string name="qa12ans3">งานติดต่อพบปะผู้คน</string>
    <string name="qa12ans4">งานที่ไม่หยุดนิ่งกับที่ ต้องออกเดินทางบ่อยๆ</string>

    <string name="qa13">ถ้าจะอธิบายอะไรสักอย่าง คิดว่าจะเลือกใช้วิธีการใดในการอธิบายสิ่งนั้นได้ดีที่สุด</string>
    <string name="qa13ans1">เขียน</string>
    <string name="qa13ans2">พูด</string>
    <string name="qa13ans3">ภาพถ่าย</string>
    <string name="qa13ans4">ภาพวาด</string>

    <string name="qa14">ลักษณะเด่นของตัวเราคือ...</string>
    <string name="qa14ans1">ซื่อสัตย์ เที่ยงตรง</string>
    <string name="qa14ans2">ละเอียดรอบคอบ</string>
    <string name="qa14ans3">ฉลาด แก้ปัญหาเฉพาะหน้าได้ดี</string>
    <string name="qa14ans4">จิตนาการกว้างไกล</string>

    <string name="qa15">ความสามารถในการจําของเรา... </string>
    <string name="qa15ans1">ดี</string>
    <string name="qa15ans2">ค่อนข้างดี</string>
    <string name="qa15ans3">ปานกลาง</string>
    <string name="qa15ans4">ไม่ถนัดเรื่องจำ</string>

    <string name="qa16">ความสามารถในการทำงานที่เกี่ยวข้องกับตัวเลขของเรา...</string>
    <string name="qa16ans1">ดี</string>
    <string name="qa16ans2">ค่อนข้างดี</string>
    <string name="qa16ans3">ปานกลาง</string>
    <string name="qa16ans4">ไม่แน่ใจ</string>


    <string name="qa17">เมื่อเปรียบเทียบกับวันธรรมดาแล้ว วันหยุดของเราจะเป็นแบบ...</string>
    <string name="qa17ans1">วางแพลนไว้เยอะแยะไปหมด ไม่งั้นก้น่าเบื่อแย่</string>
    <string name="qa17ans2">ดูเรื่อยๆ ว่ามีอะไรที่ยังทำค้างอยู่ หรือยังไม่ได้ทำบ้างแล้วก็จัดการทำให้เสร็จไปเสีย</string>
    <string name="qa17ans3">แพลนไว้มากมาย แต่โดยมากมักจะมีอะไรอย่างอื่นทำตลอด</string>
    <string name="qa17ans4">ไม่เห็นมีอะไรแตกต่าง ระหว่างวันธรรมดา กับวันหยุดเลยนี่</string>



   <!--  science sector quiz  -->

    <string name="qs1">วิชาสุดโปรดคือ...</string>
    <string name="qs1ans1">ภาษาไทยสังคม</string>
    <string name="qs1ans2">ภาษาอังกฤษ</string>
    <string name="qs1ans3">คณิตศาสตร์</string>
    <string name="qs1ans4">ฟิสิกส์</string>
    <string name="qs1ans5">เคมี</string>
    <string name="qs1ans6">ชีววิทยา</string>

    <string name="qs2">วิชาที่น่าเบื่อ พาลให้เกลียดเอาง่ายๆ</string>

    <string name="qs3">เวลามีนัดคุณมักจะ</string>
    <string name="qs3ans1">ไปก่อนเวลาเสมอ</string>
    <string name="qs3ans2">ส่วนใหญ่ก้ไปทันเวลา</string>
    <string name="qs3ans3">ขึ้นอยู่กับความสำคัญของนัด</string>
    <string name="qs3ans4">ขึ้นอยู่กับอากาศและอารมณ์ในวันนั้น</string>

    <string name="qs4">คะแนนในวิชาคณิตศาสตร์มักจะ</string>

    <string name="qs5">ถ้าจะซื้อปากกาสักด้าม สิ่งแรกที่นำมาพิจารณาคือ...</string>
    <string name="qs5ans1">คุณภาพดี เขียนลื่น หมึกออกสม่ำเสมอ</string>
    <string name="qs5ans2">ราคาไม่แพงคุ้มค่าที่จะซื้อ</string>
    <string name="qs5ans3">ดีไซน์สวย ทันสมัย ถูกใจ</string>
    <string name="qs5ans4">สีสันของปากกา</string>

    <string name="qs6">ถ้าเกิดว่าพลาดท่า ทำอุปกรณ์หรือเครื่องมือเสียขึ้นมา...</string>
    <string name="qs6ans1">ศึกษาวิธีแก้ไขจากคู่มือ และทำการแก้ไขเอง</string>
    <string name="qs6ans2">ถามผู้รู้ และลงมือแก้ไขด้วยตัวเอง</string>
    <string name="qs6ans3">ขอความช่วยเหลือจากผู้รู้ให้ช่วยแก้ไข</string>
    <string name="qs6ans4">ช่างมัน! ซื้อใหม่ดีกว่า</string>


    <string name="qs7">อนาคตของเด็กไทยจะดีแค่ไหนขึ้นอยู่กับ...</string>
    <string name="qs7ans1">การได้รับการศึกษาและใส่ใจในการเรียนรู้</string>
    <string name="qs7ans2">การรับประทานอาหารที่ครบหมวดหมู่</string>
    <string name="qs7ans3">การออกกำลังกายเพื่อสุขภาพที่แข็งแรง</string>
    <string name="qs7ans4">การได้รับความรักและความอบอุ่นจากครอบครัว</string>


    <string name="qs8">ข้อใดที่ให้ความสนใจมากที่สุด</string>
    <string name="qs8ans1">วิทยากรใหม่ๆ</string>
    <string name="qs8ans2">เรื่องเศรษฐกิจและการเมือง</string>
    <string name="qs8ans3">สังคมและการเมือง</string>
    <string name="qs8ans4">งานศิลปะและงานออกแบบ</string>

    <string name="qs9">รูปทรงแบบไหนที่ชอบที่สุด</string>
    <string name="qs9ans1">สี่เหลี่ยมจัตุรัส</string>
    <string name="qs9ans2">สามเหลี่ยมด้านเท่า</string>
    <string name="qs9ans3">วงกลม</string>
    <string name="qs9ans4">ครึ่งวงกลม</string>


    <string name="qs10">ข้อใดใกล้เคียงกับความสามารถในตัวเรามากที่สุด</string>
    <string name="qs10ans1">มีความสามารถด้านกีฬาอย่างโดดเด่น</string>
    <string name="qs10ans2">มีความสามารถด้านดังคมและความเป็นผู้นำ</string>
    <string name="qs10ans3">มีความสามารถด้านการออกแบบหรือวาดภาพ</string>
    <string name="qs10ans4">มีความารถด้านดนตรี เช่น ร้องเพลงหรือเล่นดนตรี</string>


    <!-- end of sub sci test 1 and start of sub sci test 2 -->

    <string name="qs11">ลักษณะนิสัยใดที่ใช่ตัวเรา</string>
    <string name="qs11ans1">ชอบค้นคว้า</string>
    <string name="qs11ans2">ชอบลงมือทำสิ่งใหม่ๆ</string>
    <string name="qs11ans3">ชอบพูดชอบการสื่อสาร และสามารถบรรยายถึงสิ่งต่างๆได้</string>
    <string name="qs11ans4">เบื่อง่าย ชอบอะไรที่ท้าทาย</string>


    <string name="qs12">งานแบบไหนที่ทำแล้วมีความสุข</string>
    <string name="qs12ans1">งานในห้องทดลองงานวิจัย</string>
    <string name="qs12ans2">งานในสำนักงานหรือโรงพยาบาล</string>
    <string name="qs12ans3">งานติดต่อพบปะกับผู้คน</string>
    <string name="qs12ans4">เบื่อง่าย ชอบอะไรที่ท้าทาย</string>


    <string name="qs13">เรื่องใดต่อไปนี้ ที่อยู่ในความสนใจมากเป็นอันดับหนึ่ง</string>
    <string name="qs13ans1">วิทยาศาตร์</string>
    <string name="qs13ans2">เทคโนโลยี</string>
    <string name="qs13ans3">สังคมและการศึกษา</string>
    <string name="qs13ans4">ธรรมชาติและสภาพแวดล้อม</string>


    <string name="qs14">พิจารณาดูตัวเองแล้ว เราเป็นคนที่ถนัดทางไหน</string>
    <string name="qs14ans1">อ่าน</string>
    <string name="qs14ans2">คิด</string>
    <string name="qs14ans3">เขียน</string>
    <string name="qs14ans4">พูด</string>

    <string name="qs15">ความสามารถในการทำงานกับสิ่งเล็กๆ ชิ้นงานเล็กๆ</string>
    <string name="qs15ans1">ดี</string>
    <string name="qs15ans2">ค่อนข้างดี</string>
    <string name="qs15ans3">ปานกลาง</string>
    <string name="qs15ans4">ไม่ชอบเลย</string>


    <string name="qs16">นิยายใดที่น่าจะเป็นตัวเรา</string>
    <string name="qs16ans1">เสมอต้นเสมอปลาย</string>
    <string name="qs16ans2">ทนทายาท</string>
    <string name="qs16ans3">น้ำใสใจจริง</string>
    <string name="qs16ans4">ถึงไหนถึงกัน</string>


    <string name="qs17">ความสามารถในการจำ ดีแค่ไหน</string>
    <string name="qs17ans1">ดี</string>
    <string name="qs17ans2">ค่อนข้างดี</string>
    <string name="qs17ans3">ปานกลาง</string>
    <string name="qs17ans4">ไม่เท่าไร</string>


    <string name="qs18">ความสามารถใด ที่เราคิดว่า เราถนัดมากกว่ากัน</string>
    <string name="qs18ans1">ความสามารถเชิงคำนวณ</string>
    <string name="qs18ans2">ความสามารถในการใช้เหตุผล</string>
    <string name="qs18ans3">ความสามารถในการติดต่อสื่อสาร</string>
    <string name="qs18ans4">ความสามารถในการใช้จินตนาการ</string>

    <!-- test pre sci type 1 -->

    <string name="qs19title">ก้าวต่อไปของเด็กวิทย์ แบบที่ 1</string>
    <string name="qs19">วิชาต่อไปนี้ที่ชอบเรียนและมีความสนใจมากกว่ากัน</string>
    <string name="qs19ans1">ชอบ ชีววิทยา เคมี</string>
    <string name="qs19ans2">ชอบ พอๆ กันทั้งฟิสิกส์ เคมี ชีววิทยา</string>
    <string name="qs19ans3">ชอบ คณิตศาสตร์</string>



    <string name="mynameis">ฉันชื่อ</string>
    <string name="age">อายุ</string>
    <string name="sex">เพศ</string>
    <string name="male">ชาย</string>
    <string name="female">หญิง</string>
    <string name="savedata">บันทึกข้อมูลของฉัน</string><string name="login">Login</string><string name="newmember">New to member?</string><string name="join">Join Now!</string>




</resources>
