<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="fill_parent"
    android:layout_height="match_parent">
    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/imageView"
        android:src="@drawable/logo1_resmall" />

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/linearLayout3"
        android:layout_margin="10dp">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/imageView5"
            android:src="@drawable/logo2_resmall" />
    </LinearLayout>

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="@color/bgTest"
        android:layout_gravity="center_horizontal"
        android:layout_margin="20dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textView"
            android:textColor="@color/bgwhite"
            android:layout_gravity="center"
            android:layout_margin="20dp"
            android:text="@string/qs18" />
        <RadioGroup android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp">
            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/radioButton"
                android:textColor="@color/bgwhite"
                android:layout_margin="5dp"
                android:text="@string/qs18ans1" />

            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/radioButton2"
                android:textColor="@color/bgwhite"
                android:layout_margin="5dp"
                android:text="@string/qs18ans2" />

            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/radioButton3"
                android:textColor="@color/bgwhite"
                android:layout_margin="5dp"
                android:text="@string/qs18ans3" />

            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/radioButton4"
                android:textColor="@color/bgwhite"
                android:layout_margin="5dp"
                android:text="@string/qs18ans4" />


        </RadioGroup>
    </LinearLayout>

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical"
        android:gravity="center_horizontal"
        android:id="@+id/linearLayout" >

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/btnSend"
            android:src="@drawable/img_send"
            android:onClick="onClickNext"
            android:clickable="true" />
    </LinearLayout>

</LinearLayout>