<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="fill_parent"
    android:layout_height="match_parent">
    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/imageView"
        android:src="@drawable/logo1_resmall" />

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/linearLayout3"
        android:layout_margin="10dp">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/imageView5"
            android:src="@drawable/logo2_resmall" />
    </LinearLayout>

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="@color/bgTest"
        android:layout_gravity="center_horizontal"
        android:layout_margin="20dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textView"
            android:textColor="@color/bgwhite"
            android:layout_gravity="center"
            android:layout_margin="20dp"
            android:text="@string/qs11" />
        <RadioGroup android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp">
            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/radioButton"
                android:textColor="@color/bgwhite"
                android:layout_margin="5dp"
                android:text="@string/qs11ans1" />

            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/radioButton2"
                android:textColor="@color/bgwhite"
                android:layout_margin="5dp"
                android:text="@string/qs11ans2" />

            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/radioButton3"
                android:textColor="@color/bgwhite"
                android:layout_margin="5dp"
                android:text="@string/qs11ans3" />

            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/radioButton4"
                android:textColor="@color/bgwhite"
                android:layout_margin="5dp"
                android:text="@string/qs11ans4" />


        </RadioGroup>
    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/imageView2"
            android:src="@drawable/icnback_resmall"
            android:layout_marginRight="50dp" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/imageView3"
            android:src="@drawable/icnnext_resmall"
            android:layout_marginLeft="50dp" />
    </LinearLayout>

</LinearLayout>